WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21055
not invoked functions
https://bugs.webkit.org/show_bug.cgi?id=21055
Summary
not invoked functions
Gabriella Toth
Reported
2008-09-24 05:14:14 PDT
I performed static source code analysis on WebKit and found 6 functions which are not invoked at all, therefore they can be deleted. The list of functions: * start_iter (JavaScriptCore/wtf/AVLTree.h, line: 168, Lines of Code (LOC) = 49) * setStandardAttributes (WebCore/svg/SVGFilterPrimitiveStandardAttributes.cpp, line: 72, LOC = 53) * scrollTo (WebCore/page/FrameView.cpp, line 565, LOC = 64) * canReplaceChild (WebCore/dom/Document.cpp, line 2002, LOC = 84) * statementListInitializeVariableAccessStack (JavaScriptCore/kjs/nodes.cpp, line 1103, LOC = 16) * callOnMainThreadAndWait (JavaScriptCore/wtf/MainThread.cpp, line 106, LOC = 21)
Attachments
proposed patch
(14.76 KB, patch)
2008-09-24 05:15 PDT
,
Gabriella Toth
eric
: review-
Details
Formatted Diff
Diff
proposed patch
(2.53 KB, patch)
2008-09-25 01:49 PDT
,
Gabriella Toth
timothy
: review-
Details
Formatted Diff
Diff
proposed patch
(3.38 KB, patch)
2008-09-25 01:49 PDT
,
Gabriella Toth
no flags
Details
Formatted Diff
Diff
proposed patch
(3.94 KB, patch)
2008-09-25 01:50 PDT
,
Gabriella Toth
timothy
: review-
Details
Formatted Diff
Diff
proposed patch
(1.39 KB, patch)
2008-09-25 02:22 PDT
,
Gabriella Toth
no flags
Details
Formatted Diff
Diff
proposed patch
(1.88 KB, patch)
2008-09-25 02:47 PDT
,
Gabriella Toth
timothy
: review-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabriella Toth
Comment 1
2008-09-24 05:15:27 PDT
Created
attachment 23748
[details]
proposed patch
Eric Seidel (no email)
Comment 2
2008-09-24 15:20:22 PDT
Comment on
attachment 23748
[details]
proposed patch Some of these should probably have ifdefs around them (like USE(SVG_FILTERS), but I don't think all of these should be deleted. We should address these each with separate patches.
Gabriella Toth
Comment 3
2008-09-25 01:49:14 PDT
Created
attachment 23785
[details]
proposed patch
Gabriella Toth
Comment 4
2008-09-25 01:49:57 PDT
Created
attachment 23786
[details]
proposed patch
Gabriella Toth
Comment 5
2008-09-25 01:50:32 PDT
Created
attachment 23787
[details]
proposed patch
Gabriella Toth
Comment 6
2008-09-25 02:22:35 PDT
Created
attachment 23788
[details]
proposed patch
Gabriella Toth
Comment 7
2008-09-25 02:47:32 PDT
Created
attachment 23789
[details]
proposed patch
Timothy Hatcher
Comment 8
2008-09-25 07:30:32 PDT
Comment on
attachment 23789
[details]
proposed patch The callOnMainThreadAndWait function was added only 3 weeks ago and it the ground work for future tasks that will use it.
r36056
Timothy Hatcher
Comment 9
2008-09-25 07:36:53 PDT
Comment on
attachment 23787
[details]
proposed patch The Document::canReplaceChild method is replaces the base-class Node::canReplaceChild version.
Darin Adler
Comment 10
2008-09-29 09:12:05 PDT
Comment on
attachment 23788
[details]
proposed patch r=me
Alexey Proskuryakov
Comment 11
2008-09-30 07:48:52 PDT
Comment on
attachment 23786
[details]
proposed patch FrameView::scrollTo() has been recently removed by Hyatt.
Darin Adler
Comment 12
2008-10-12 19:16:11 PDT
Comment on
attachment 23788
[details]
proposed patch Clearing the review flag because this has been landed.
Timothy Hatcher
Comment 13
2008-10-17 04:10:11 PDT
Comment on
attachment 23785
[details]
proposed patch I don't think we should remove AVLTree::start_iter just because it isn't used today.
Gabriella Toth
Comment 14
2008-11-10 02:05:29 PST
Ok. It can be closed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug