2008-10-12  Gabriella Toth  <gtoth@inf.u-szeged.hu>

Reviewed by Darin Adler.

        - part of https://bugs.webkit.org/show_bug.cgi?id=21055
          Bug 21055: not invoked functions

        * kjs/nodes.cpp: Deleted a function that is not invoked:
        statementListInitializeVariableAccessStack.



Canonical link: https://commits.webkit.org/29795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37553 268f45cc-cd09-0410-ab3c-d52691b4dbfc